# er-maestro

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: perf-bench.md  release-ci.md
examples/: 01_users.sql  02_catalog.sql  03_orders.sql
scripts/: bench-graph.mjs  gen-bench-schema.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/_brand/: build_icon.py
src-tauri/src/: commands.rs  fs_scan.rs  lib.rs  main.rs  model.rs
src-tauri/src/parser/: dialect.rs  extract.rs  mod.rs
src/api/: commands.ts  recentStore.ts
src/components/: Canvas.tsx  EmptyState.tsx  ExportPanel.tsx  KeyboardShortcuts.tsx  Sidebar.tsx  SqlPasteModal.tsx  TableNode.tsx  Toolbar.tsx
src/graph/: buildGraph.ts  exportImage.ts  neighbors.ts
src/graph/layout/: dagre.ts  elk.ts  index.ts
src/store/: schemaStore.ts
src/types/: Column.ts  Relationship.ts  RelationshipCardinality.ts  RelationshipVia.ts  SchemaModel.ts  Table.ts  TableKind.ts  index.ts
